--- a/Affichage.html
+++ b/Affichage.html
@@ -14,8 +14,6 @@
             margin: 20px 0;
         }
     </style>
-    <!-- Inclusion de l'API Grist -->
-    <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
 </head>
 <body>
 
@@ -25,41 +23,52 @@
     </select>
 
     <script>
+        const apiUrl = 'https://vincitest.getgrist.com/api/docs/h7kNsaQWiWzdVBU8WfZWpF/tables/Fusion/records';  // URL correcte de l'API
+        const bearerToken = '52a7601b8532a91257c92a42eda896b47aa6c73d'; // Ton token d'accès
+
         // Fonction pour charger les valeurs uniques de la première colonne
-        function loadUniqueValues(records) {
-            const uniqueValues = [...new Set(records.map(record => record.fields[Object.keys(record.fields)[0]]))];
-
-            // Obtenir l'élément <select> pour y ajouter les options
-            const selectElement = document.getElementById('uniqueValuesSelect');
-
-            // Ajouter une option vide par défaut
-            const defaultOption = document.createElement('option');
-            defaultOption.value = '';
-            defaultOption.textContent = '-- Sélectionner une valeur --';
-            selectElement.appendChild(defaultOption);
-
-            // Ajouter une option par valeur unique trouvée
-            uniqueValues.forEach(value => {
-                if (value) {
-                    const option = document.createElement('option');
-                    option.value = value;
-                    option.textContent = value;
-                    selectElement.appendChild(option);
+        function loadUniqueValues() {
+            fetch(apiUrl, {
+                method: 'GET',
+                headers: {
+                    'Authorization': `Bearer ${bearerToken}`,
+                    'Content-Type': 'application/json'
                 }
-            });
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Erreur lors de la récupération des données');
+                }
+                return response.json();
+            })
+            .then(data => {
+                // Extraire les valeurs de la première colonne et filtrer les duplications
+                const uniqueValues = [...new Set(data.records.map(record => record.fields.NomProjet))];
+
+                // Obtenir l'élément <select> pour y ajouter les options
+                const selectElement = document.getElementById('uniqueValuesSelect');
+
+                // Ajouter une option vide par défaut
+                const defaultOption = document.createElement('option');
+                defaultOption.value = '';
+                defaultOption.textContent = '-- Sélectionner une valeur --';
+                selectElement.appendChild(defaultOption);
+
+                // Ajouter une option par valeur unique trouvée
+                uniqueValues.forEach(value => {
+                    if (value) {
+                        const option = document.createElement('option');
+                        option.value = value;
+                        option.textContent = value;
+                        selectElement.appendChild(option);
+                    }
+                });
+            })
+            .catch(error => console.error('Erreur lors du chargement des valeurs uniques:', error));
         }
 
-        // Initialisation du widget Grist
-        grist.ready();
-
-        // Récupération des enregistrements de la table actuelle
-        grist.onRecords(records => {
-            if (records.length === 0) {
-                console.error('Aucun enregistrement trouvé.');
-                return;
-            }
-            loadUniqueValues(records);
-        });
+        // Charger les valeurs uniques au démarrage
+        loadUniqueValues();
     </script>
 
 </body>
