--- a/Affichage.html
+++ b/Affichage.html
@@ -1,75 +1,119 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Grist Widget - Liste Sélectionnable</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        select {
-            width: 200px;
-            padding: 10px;
-            margin: 20px 0;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grist First Column List</title>
 </head>
 <body>
-
-    <h3>Sélectionnez une valeur unique !</h3>
-    <select id="uniqueValuesSelect">
-        <!-- Les options seront ajoutées dynamiquement ici -->
+    <!-- Dropdown (équivalent de ComboBox en HTML) -->
+    <select id="firstColumnDropdown" onchange="onFirstColumnSelectionChange()">
+        <option value="">Select an option</option>
     </select>
 
+    <!-- Liste des valeurs de la deuxième colonne -->
+    <ul id="secondColumnList"></ul>
+
     <script>
-        const apiUrl = 'https://vincitest.getgrist.com/api/docs/h7kNsaQWiWzdVBU8WfZWpF/tables/Fusion/records';  // URL correcte de l'API
-        const bearerToken = '52a7601b8532a91257c92a42eda896b47aa6c73d'; // Ton token d'accès
+        const apiUrl = 'https://vincitest.getgrist.com/api/docs/h7kNsaQWiWzdVBU8WfZWpF/tables/Fusion/records';
+        const bearerToken = '52a7601b8532a91257c92a42eda896b47aa6c73d';
 
-        // Fonction pour charger les valeurs uniques de la première colonne
-        function loadUniqueValues() {
-            fetch(apiUrl, {
-                method: 'GET',
-                headers: {
-                    'Authorization': `Bearer ${bearerToken}`,
-                    'Content-Type': 'application/json'
-                }
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Erreur lors de la récupération des données');
-                }
-                return response.json();
-            })
-            .then(data => {
-                // Extraire les valeurs de la première colonne et filtrer les duplications
-                const uniqueValues = [...new Set(data.records.map(record => record.fields.NomProjet))];
-
-                // Obtenir l'élément <select> pour y ajouter les options
-                const selectElement = document.getElementById('uniqueValuesSelect');
-
-                // Ajouter une option vide par défaut
-                const defaultOption = document.createElement('option');
-                defaultOption.value = '';
-                defaultOption.textContent = '-- Sélectionner une valeur --';
-                selectElement.appendChild(defaultOption);
-
-                // Ajouter une option par valeur unique trouvée
-                uniqueValues.forEach(value => {
-                    if (value) {
-                        const option = document.createElement('option');
-                        option.value = value;
-                        option.textContent = value;
-                        selectElement.appendChild(option);
+        // Fonction pour obtenir les données de la première colonne
+        async function fetchFirstColumnValues() {
+            try {
+                const response = await fetch(apiUrl, {
+                    method: 'GET',
+                    headers: {
+                        'Authorization': `Bearer ${bearerToken}`
                     }
                 });
-            })
-            .catch(error => console.error('Erreur lors du chargement des valeurs uniques:', error));
+
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+
+                const data = await response.json();
+                const records = data.records;
+
+                // Récupérer les valeurs uniques de la première colonne (par exemple 'NomProjet')
+                const firstColumnValues = [...new Set(records.map(record => record.fields.NomProjet))];
+
+                // Ajouter l'option "Ajouter" à la liste
+                firstColumnValues.push('Ajouter');
+
+                populateFirstColumnDropdown(firstColumnValues);
+            } catch (error) {
+                console.error('Error fetching first column values:', error);
+            }
         }
 
-        // Charger les valeurs uniques au démarrage
-        loadUniqueValues();
-    </script>
+        // Fonction pour remplir la liste déroulante avec les valeurs de la première colonne
+        function populateFirstColumnDropdown(values) {
+            const dropdown = document.getElementById('firstColumnDropdown');
 
+            values.forEach(value => {
+                const option = document.createElement('option');
+                option.value = value;
+                option.text = value;
+                dropdown.appendChild(option);
+            });
+        }
+
+        // Fonction qui gère la sélection dans la première colonne
+        function onFirstColumnSelectionChange() {
+            const selectedValue = document.getElementById('firstColumnDropdown').value;
+            if (selectedValue === 'Ajouter') {
+                alert('Fonctionnalité Ajouter activée');
+                // Implémenter ici la logique pour ajouter un nouvel élément
+            } else if (selectedValue) {
+                fetchSecondColumnValues(selectedValue);
+            } else {
+                document.getElementById('secondColumnList').innerHTML = '';
+            }
+        }
+
+        // Fonction pour obtenir les données de la deuxième colonne en fonction de la valeur sélectionnée de la première colonne
+        async function fetchSecondColumnValues(firstColumnValue) {
+            try {
+                const response = await fetch(apiUrl, {
+                    method: 'GET',
+                    headers: {
+                        'Authorization': `Bearer ${bearerToken}`
+                    }
+                });
+
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+
+                const data = await response.json();
+                const records = data.records;
+
+                // Filtrer les valeurs de la deuxième colonne (par exemple 'NomEtage') en fonction de la première colonne
+                const secondColumnValues = records
+                    .filter(record => record.fields.NomProjet === firstColumnValue)
+                    .map(record => record.fields.NomEtage);
+
+                populateSecondColumnList(secondColumnValues);
+            } catch (error) {
+                console.error('Error fetching second column values:', error);
+            }
+        }
+
+        // Fonction pour remplir la liste des valeurs de la deuxième colonne
+        function populateSecondColumnList(values) {
+            const list = document.getElementById('secondColumnList');
+            list.innerHTML = '';
+
+            values.forEach(value => {
+                const li = document.createElement('li');
+                li.textContent = value;
+                list.appendChild(li);
+            });
+        }
+
+        // Appel de la fonction pour charger les données dès que la page est chargée
+        window.onload = fetchFirstColumnValues;
+    </script>
 </body>
 </html>
