--- a/Affichage.html
+++ b/Affichage.html
@@ -64,7 +64,7 @@
             const selectedValue = document.getElementById('firstColumnDropdown').value;
             if (selectedValue === 'Ajouter') {
                 alert('Fonctionnalité Ajouter activée');
-                // Implémenter ici la logique pour ajouter un nouvel élément
+                // Implémenter ici la logique pour ajouter un nouv'el élément
             } else if (selectedValue) {
                 fetchSecondColumnValues(selectedValue);
             } else {
