--- a/Affichage.html
+++ b/Affichage.html
@@ -6,9 +6,9 @@
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
   </head>
   <body>
-    <label for="firstColumnDropdown">Select from first column:</label>
+    <label for="firstColumnDropdown">Projet :</label>
     <select id="firstColumnDropdown">
-      <option value="">Select an option</option>
+      <option value=""></option>
     </select>
 
     <script>
