--- a/Affichage.html
+++ b/Affichage.html
@@ -8,7 +8,7 @@
   <body>
     <label for="firstColumnDropdown">Projet :</label>
     <select id="firstColumnDropdown">
-      <option value=""></option>
+      <option value="">test</option>
     </select>
 
     <script>
