--- a/Affichage.html
+++ b/Affichage.html
@@ -6,7 +6,7 @@
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
   </head>
   <body>
-    <label for="firstColumnDropdown">Select from first column (NomProjet):</label>
+    <label for="firstColumnDropdown">Projet :</label>
     <select id="firstColumnDropdown">
       <option value="">Select an option</option>
     </select>
