--- a/Affichage.html
+++ b/Affichage.html
@@ -13,7 +13,7 @@
 
     <br><br>
 
-    <label for="secondColumnListbox">Second column values (NomEtage):</label>
+    <label for="secondColumnListbox">Tableau :</label>
     <select id="secondColumnListbox" multiple size="10">
     </select>
 
