--- a/Affichage.html
+++ b/Affichage.html
@@ -5,21 +5,23 @@
     <title>Grist Two-Step Selection with Table</title>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
     <style>
-      /* Style to center the content on the page */
+      /* Style to center the content and keep it organized */
       body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
-        height: 100vh;
+        justify-content: flex-start;
         margin: 0;
+        padding: 20px;
         font-family: Arial, sans-serif;
+        background-color: #2c2c2c;
       }
 
-      /* Style for both the labels and select elements */
+      /* Style for labels and select elements */
       label {
         font-weight: bold;
         margin-bottom: 10px;
+        color: #fff;
       }
 
       select {
@@ -28,9 +30,18 @@
         margin-bottom: 20px;
       }
 
+      /* Container for keeping lists at the top */
+      .selection-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 20px;
+      }
+
       /* Style for the table */
       table {
-        width: 600px;
+        width: 100%;
+        max-width: 800px;
         border-collapse: collapse;
         margin-top: 20px;
       }
@@ -39,26 +50,36 @@
         padding: 10px;
         border: 1px solid #ddd;
         text-align: left;
+        background-color: #f4f4f4;
       }
 
       th {
-        background-color: #f4f4f4;
+        background-color: #333;
+        color: white;
+      }
+
+      td {
+        background-color: white;
+        color: black;
       }
     </style>
   </head>
   <body>
-    <label for="firstColumnDropdown">Projet :</label>
-    <select id="firstColumnDropdown">
-      <option value="">Select an option</option>
-    </select>
+    <div class="selection-container">
+      <!-- First dropdown for selecting a project -->
+      <label for="firstColumnDropdown">Projet :</label>
+      <select id="firstColumnDropdown">
+        <option value="">Select an option</option>
+      </select>
 
-    <br><br>
+      <br><br>
 
-    <label for="secondColumnListbox">Tableau :</label>
-    <select id="secondColumnListbox" multiple size="10"></select>
+      <!-- Second listbox for selecting the tableau -->
+      <label for="secondColumnListbox">Tableau :</label>
+      <select id="secondColumnListbox" multiple size="10"></select>
+    </div>
 
-    <br><br>
-
+    <!-- Table to display the remaining data -->
     <table id="dataTable">
       <thead>
         <tr id="tableHeader"></tr>
